--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Document</title>
 </head>
 <body>
-</html><div>Hellow world nothing there</div>
-</html><div>Hellow world nothing there something 1</div>
+        <div>Hellow world nothing there</div>
+        <div>Hellow world nothing there something 1</div>
+</html>
 </body>
